bugfix: correct flow when don't have participants data
