# app/Http/Requests/LegalCase/LegalCaseUpdateRequest.php
@@ -31,8 +31,8 @@ class LegalCaseUpdateRequest extends FormRequest
             'court' => ['nullable'],
             'fields_of_law' => ['nullable'],
             'participants' => ['array', 'nullable'],
-            'participants.user_id' => ['required', 'exists:users,id'], 
-            'participants.participant_type_id' => ['required', 'exists:users,id'], 
+            // 'participants.user_id' => ['nullable', 'exists:users,id'], 
+            // 'participants.participant_type_id' => ['nullable', 'exists:users,id'], 
         ];
     }
 }
